Bug #1245 - Mobile iOS: text overflows boxes on Person profile > [person's] groups

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -440,6 +440,12 @@ body{
         &.no-margin-bottom{
             margin-bottom: 0;
         }
+        &.no-margin-right{
+            margin-right: 0;
+        }
+        &.no-margin-left{
+            margin-left: 0;
+        }
     }
     .btn-margin{
         &.btn-margin-top{
@@ -1341,6 +1347,14 @@ body{
                 .fa{
                     font-size: 11px;
                 }
+            }
+            .btn{
+                .fa-user{
+                    margin-right: 2px;
+                }
+            }
+            @media (max-width: @screen-sm-max){
+                height: 130px;
             }
         }
     }
